<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/chat_refresh"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_room_info"
        android:icon="@drawable/ic_info_outline"
        android:title="@string/chat_room_info"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_mark_read"
        android:title="@string/chat_mark_as_read"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_clear_history"
        android:title="@string/chat_clear_history"
        app:showAsAction="never" />
        
</menu>
